Changelog
=========

2.4.20 (unreleased)
-------------------

- Filter out references that are None.  This may happen when the
  reference_catalog has links from a source to a no longer existing
  target.
  [maurits]


2.4.19 (2013-08-13)
-------------------

- Modified pagination links selector to use only ".listingBar" instead of
  "div.listingBar". The batchnavigation.pt template can be customized in a
  theme and use a different structure, "ul.listingBar" for example.
  [vincentfretin]

- If we have a sort_on parameter in base_query,
  use it instead of getObjPositionInParent to display folder content.
  [thomasdesvenain]


2.4.18 (2013-05-23)
-------------------

- Added two widget properties that allow to add help messages on popup,
  in two slots (top and bottom).
  [thomasdesvenain]

- Added css ids in popup.
  [thomasdesvenain]

- Wrap jQuery functions for better compatibility.
  [esteele]


2.4.17 (2013-03-05)
-------------------

- 2.4.15 broke non-multi reference selection. Added code to discriminate
  between multi and single widget id. Fixes http://dev.plone.org/ticket/13402
  [smcmahon]


2.4.16 (2013-01-13)
-------------------

- Add an option of searching for related items by path.
  [plamut]


2.4.15 (2012-12-14)
-------------------

- Make new added references sortable with already existing ones
  while editing a content.  Fixes http://dev.plone.org/plone/ticket/13271
  [gbastien]

- Use HTML5 placeholder attribute on search box. Replaces deprecated
  inputLabel class.
  [danjacka]


2.4.14.1 (2012-11-07)
---------------------

- Fixed typo
  [tomgross]


2.4.14 (2012-10-18)
-------------------

- Use normalizeString to create class names for an item's portal type
  and review state. Fixes http://dev.plone.org/plone/ticket/11400.
  [danjacka]

- don't let search fail on broken catalog
  [tomgross]


2.4.13 (2012-10-11)
-------------------

- Restored a "*view*" link on linkable items (as with Plone 3):